# rs-on-nails

./: README.md
crates/db/: build.rs
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/web-assets/: build.rs
crates/web-pages/: Cargo.toml
crates/web-pages/src/: layout.rs  lib.rs  root.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: config.rs  errors.rs  main.rs  root.rs  static_files.rs
